--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           <ul class="sectwo-ul">
             <li class="sectwo-li">
               <div class="sectwo-container">
-                <svg class="sectwo-svg" width="64px" height="64px">
-                  <use href="./images/icon.svg#icon-antenna"></use>
+                <svg class="sectwo-svg" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Strategy</h3>
@@ -80,8 +80,8 @@
             </li>
             <li class="sectwo-li">
               <div class="sectwo-container">
-                <svg class="sectwo-svg"  width="64px" height="64px">
-                  <use href="./images/icon.svg#icon-clock"></use>
+                <svg class="sectwo-svg"  width="64" height="64">
+                  <use href="./images/sprite.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Punctuality</h3>
@@ -92,8 +92,8 @@
             </li>
             <li class="sectwo-li">
               <div class="sectwo-container">
-                <svg class="sectwo-svg" width="64px" height="64px">
-                  <use href="./images/icon.svg#icon-diagram"></use>
+                <svg class="sectwo-svg" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Diligence</h3>
@@ -104,8 +104,8 @@
             </li>
             <li class="sectwo-li">
               <div class="sectwo-container">
-                <svg class="sectwo-svg" width="64px" height="64px">
-                  <use href="./images/icon.svg#icon-astronaut"></use>
+                <svg class="sectwo-svg" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Technologies</h3>
@@ -129,29 +129,29 @@
                 <ul class="social-ul">
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-instagram"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -166,29 +166,29 @@
                 <ul class="social-ul">
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-instagram"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                      <svg class="social-svg"width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -203,29 +203,29 @@
                 <ul class="social-ul">
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-instagram"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -240,29 +240,29 @@
                 <ul class="social-ul">
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-instagram"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                      <svg class="social-svg" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -380,29 +380,29 @@
           <ul class="footer-socials-list">
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
-                <svg class="footer-socials-icon" >
-                  <use href="./images/icon.svg#icon-instagram"></use>
+                <svg class="footer-socials-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
-                <svg class="footer-socials-icon" >
-                  <use href="./images/icon.svg#icon-twitter"></use>
+                <svg class="footer-socials-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
-                <svg class="footer-socials-icon">
-                  <use href="./images/icon.svg#icon-facebook"></use>
+                <svg class="footer-socials-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
-                <svg class="footer-socials-icon">
-                  <use href="./images/icon.svg#icon-linkedin"></use>
+                <svg class="footer-socials-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
