--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
                 <svg class="sectwo-svg" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Strategy</h3>
@@ -81,7 +81,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
                 <svg class="sectwo-svg"  width="64" height="64">
-                  <use href="./images/sprite.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Punctuality</h3>
@@ -93,7 +93,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
                 <svg class="sectwo-svg" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Diligence</h3>
@@ -105,7 +105,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
                 <svg class="sectwo-svg" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Technologies</h3>
@@ -130,28 +130,28 @@
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -167,28 +167,28 @@
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -204,28 +204,28 @@
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -241,28 +241,28 @@
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
                       <svg class="social-svg" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -381,28 +381,28 @@
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
                 <svg class="footer-socials-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
                 <svg class="footer-socials-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
                 <svg class="footer-socials-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
                 <svg class="footer-socials-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
